route get magic OK
